# otm_portes

./: README.md  pyproject.toml  requirements.txt
dashboard/: algorithms.py  app.py  problem.py  scripts.py
data/row/: inputs.csv
data/solutions/: df_solutions.csv
notebooks/: mult_objective.ipynb
src/: algorithms.py  app.py  problem.py  scripts.py
