[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Douglas-cc", email = "douglasdasilvasousa8@gmail.com"},
]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.2",
    "pymoo>=0.6.0.1",
    "matplotlib>=3.7.2",
    "ipykernel>=6.25.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


